--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
+  <main class="main">
+    <img class="main__image" src="./eisenhower-matrix.jpg" alt="matrix">
+    <a class="main__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </main>
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
