--- a/index.html
+++ b/index.html
@@ -2,49 +2,55 @@
 
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" charset="UTF-8">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <title>Todo App</title>
 </head>
 
 <body>
-  <main class="main">
-    <img class="main__image" src="./eisenhower-matrix.jpg" alt="matrix">
-    <a class="main__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </main>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
-      <button>Add</button>
-    </div>
-    </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task"><button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="remove"></button>
-      </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="remove"></button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li><input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="remove"></button>
-      </li>
-    </ul>
+  <div class="wrapper">
+    <main class="main">
+      <img class="main__image" src="./eisenhower-matrix.jpg" alt="matrix">
+      <a class="main__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </main>
+    <section class="section top__section-element">
+      <label class="label__task-new" for="new-task">
+        <h3 class="title">Add Item</h3>
+      </label>
+      <div class="task__row">
+        <input class="task__row-new task" id="new-task" type="text">
+        <button class="btn">Add</button>
+      </div>
+    </section>
+    <section class="incomplate">
+      <h3 class="title">Todo</h3>
+      <ul class="incomplate__task-list list" id="incomplete-tasks">
+        <li class="list__fill">
+          <input class="checkbox" type="checkbox">
+          <label class="list__label">Pay Bills</label>
+          <input class="list__input" type="text" value="Pay Bills"><button class="btn btn__edit">Edit</button>
+          <button class="btn btn__delete"><img class="list__image" src="./remove.svg" alt="remove"></button>
+        </li>
+        <li class="list__fill list__fill-edit">
+          <input class="checkbox" type="checkbox">
+          <label class="list__label">Go Shopping</label>
+          <input class="list__input" type="text" value="Go Shopping">
+          <button class="btn btn__edit">Save</button>
+          <button class="btn btn__delete"><img class="list__image" src="./remove.svg" alt="remove"></button>
+        </li>
+      </ul>
+    </section>
+    <section class="completed">
+      <h3 class="title">Completed</h3>
+      <ul class="complated__task-list list" id="completed-tasks">
+        <li class="list__fill"><input class="checkbox" type="checkbox" checked>
+          <label class="list__label list__label-complete">See the Doctor</label>
+          <input class="list__input" type="text">
+          <button class="btn btn__edit">Edit</button>
+          <button class="btn btn__delete"><img class="list__image" src="./remove.svg" alt="remove"></button>
+        </li>
+      </ul>
+    </section>
   </div>
   <script src="app.js"></script>
 </body>
