fix: html according to rule 2.5 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <section class="completed">
       <h3 class="title">Completed</h3>
       <ul class="complated__task-list list" id="completed-tasks">
-        <li class="list__fill"><input class="checkbox" type="checkbox" checked>
+        <li class="list__fill">
+          <input class="checkbox" type="checkbox" checked>
           <label class="list__label list__label-complete">See the Doctor</label>
           <input class="list__input" type="text">
           <button class="btn btn__edit">Edit</button>
