fix: tag classname

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <ul class="complated__task-list list" id="completed-tasks">
         <li class="list__fill">
           <input class="checkbox" type="checkbox" checked>
-          <label class="list__label list__label-complete">See the Doctor</label>
+          <label class="list__label">See the Doctor</label>
           <input class="list__input" type="text">
           <button class="btn btn__edit">Edit</button>
           <button class="btn btn__delete"><img class="list__image" src="./remove.svg" alt="remove"></button>
