fix: charset for link

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       <a class="main__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </main>
     <section class="section top__section-element">
-      <label class="label__task-new" for="new-task">
-        <h3 class="title">Add Item</h3>
-      </label>
+      <label class="label__task-new" for="new-task">Add Item</label>
       <div class="task__row">
         <input class="task__row-new task" id="new-task" type="text">
         <button class="btn">Add</button>
