--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen">
   <title>Todo App</title>
 </head>
 
@@ -15,13 +15,13 @@
       <img class="main__image" src="./eisenhower-matrix.jpg" alt="matrix">
       <a class="main__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </main>
-    <section class="section top__section-element">
+    <div class="section top__section-element">
       <label class="label__task-new" for="new-task">Add Item</label>
       <div class="task__row">
         <input class="task__row-new task" id="new-task" type="text">
         <button class="btn">Add</button>
       </div>
-    </section>
+    </div>
     <section class="incomplate">
       <h3 class="title">Todo</h3>
       <ul class="incomplate__task-list list" id="incomplete-tasks">
