fix: html according to rule 2.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <h3 class="title">Todo</h3>
       <ul class="incomplate__task-list list" id="incomplete-tasks">
         <li class="list__fill">
-          <input class="checkbox" type="checkbox">
+          <input class="list__checkbox" type="checkbox">
           <label class="list__label">Pay Bills</label>
           <input class="list__input" type="text" value="Pay Bills"><button class="btn btn__edit">Edit</button>
           <button class="btn btn__delete"><img class="list__image" src="./remove.svg" alt="remove"></button>
         </li>
         <li class="list__fill list__fill-edit">
-          <input class="checkbox" type="checkbox">
+          <input class="list__checkbox" type="checkbox">
           <label class="list__label">Go Shopping</label>
           <input class="list__input" type="text" value="Go Shopping">
           <button class="btn btn__edit">Save</button>
@@ -44,7 +44,7 @@
       <h3 class="title">Completed</h3>
       <ul class="complated__task-list list" id="completed-tasks">
         <li class="list__fill">
-          <input class="checkbox" type="checkbox" checked>
+          <input class="list__checkbox" type="checkbox" checked>
           <label class="list__label">See the Doctor</label>
           <input class="list__input" type="text">
           <button class="btn btn__edit">Edit</button>
