fix: html according to rule 2.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <li class="list__fill">
           <input class="list__checkbox" type="checkbox">
           <label class="list__label">Pay Bills</label>
-          <input class="list__input" type="text" value="Pay Bills"><button class="btn btn__edit">Edit</button>
+          <input class="list__input" type="text" value="Pay Bills">
+          <button class="btn btn__edit">Edit</button>
           <button class="btn btn__delete"><img class="list__image" src="./remove.svg" alt="remove"></button>
         </li>
         <li class="list__fill list__fill-edit">
