--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <img class="main__image" src="./eisenhower-matrix.jpg" alt="matrix">
       <a class="main__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </main>
-    <div class="section top__section-element">
-      <label class="label__task-new" for="new-task">Add Item</label>
+    <div class="top__section-element task">
+      <label class="task__new-label" for="new-task">Add Item</label>
       <div class="task__row">
         <input class="task__row-new task" id="new-task" type="text">
         <button class="btn">Add</button>
